--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="modal">
              <center>   
                 <h3 class="winner"> Secret Recipe: </h3> <br> <br />
-        <p class="message"><b> Guess The Name of The Dish! </b></p>
+        <p class="message"><b> Guess The Name of The Famous Turkish Dish! </b></p>
                   <p class="message"><b> HINT: It was one of the matching cards! </b></p>
                     <p class="message"><b> 
 <img src="images/secretrecipe.png" />
